<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ums</artifactId>
        <groupId>com.usp</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>ums-service</artifactId>

    <properties>
        <maven.deploy.skip>true</maven.deploy.skip>
        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
        <jib-maven-plugin.version>2.1.0</jib-maven-plugin.version>
        <xxl-job.version>2.3.1-SNAPSHOT</xxl-job.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.usp</groupId>
            <artifactId>boss-client</artifactId>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
        <dependency>
            <groupId>com.xuxueli</groupId>
            <artifactId>xxl-job-core</artifactId>
            <version>${xxl-job.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.skywalking</groupId>
            <artifactId>apm-toolkit-trace</artifactId>
            <version>8.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.usp</groupId>
            <artifactId>ums-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.usp</groupId>
            <artifactId>basis-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.mobile</groupId>
            <artifactId>spring-mobile-device</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alipay.sdk</groupId>
            <artifactId>alipay-sdk-java</artifactId>
        </dependency>
        <dependency>
            <groupId>com.usp</groupId>
            <artifactId>framework</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>javassist</artifactId>
                    <groupId>org.javassist</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>wildfly-common</artifactId>
                    <groupId>org.wildfly.common</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.alibaba</groupId>-->
        <!--            <artifactId>fastjson</artifactId>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-generator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
        </dependency>
        <!-- nats streaming -->
        <dependency>
            <groupId>io.nats</groupId>
            <artifactId>java-nats-streaming</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>jnats</artifactId>
                    <groupId>io.nats</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-okhttp</artifactId>
            <optional>true</optional>
        </dependency>

        <!--服务注册发现中心-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>jsr305</artifactId>
                    <groupId>com.google.code.findbugs</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--dubbo-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-dubbo</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>fastjson</artifactId>
                    <groupId>com.alibaba</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.skywalking</groupId>
            <artifactId>apm-toolkit-logback-1.x</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>io.undertow</groupId>
            <artifactId>undertow-websockets-jsr</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.apache.dubbo</groupId>-->
        <!--            <artifactId>dubbo</artifactId>-->
        <!--        </dependency>-->
    </dependencies>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <profileActive>dev</profileActive>
                <Xms>-Xms512m</Xms>
                <Xmx>-Xmx512m</Xmx>
                <fromImage>registry.cn-shanghai.aliyuncs.com/usp/jdk11:base_share_gbk</fromImage>
                <toImage>registry.cn-shanghai.aliyuncs.com/usp/usp-ums-dev:v1001</toImage>
                <username>dev@1904908394781631</username>
                <password>0H%7Uwdw22C</password>
                <mySkywalkingPath>/opt/apache-skywalking-apm-bin/agent/skywalking-agent.jar</mySkywalkingPath>
                <mySkywalkingPort>172.26.211.158:11800</mySkywalkingPort>
                <mySkywalkingServiceName>dev::ums</mySkywalkingServiceName>
                <serverPort>29000</serverPort>
                <remotePort>29355</remotePort>
            </properties>
        </profile>
        <profile>
            <id>staging</id>
            <properties>
                <profileActive>staging</profileActive>
                <Xms>-Xms512m</Xms>
                <Xmx>-Xmx512m</Xmx>
                <fromImage>registry.cn-shanghai.aliyuncs.com/usp/jdk11:base_share_gbk</fromImage>
                <toImage>registry.cn-shanghai.aliyuncs.com/usp/usp-ums-staging:v1001</toImage>
                <mySkywalkingPath>/opt/apache-skywalking-apm-bin/agent/skywalking-agent.jar</mySkywalkingPath>
                <mySkywalkingPort>172.26.211.158:11800</mySkywalkingPort>
                <mySkywalkingServiceName>staging::ums</mySkywalkingServiceName>
                <username>dev@1904908394781631</username>
                <password>0H%7Uwdw22C</password>
                <serverPort>29020</serverPort>
                <remotePort>29375</remotePort>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <profileActive>release</profileActive>
                <Xms>-Xms512m</Xms>
                <Xmx>-Xmx512m</Xmx>
                <fromImage>registry.cn-shanghai.aliyuncs.com/usp/jdk11:base_share_gbk</fromImage>
                <toImage>registry.cn-shanghai.aliyuncs.com/usp/usp-ums-release:v1001</toImage>
                <username>dev@1904908394781631</username>
                <password>0H%7Uwdw22C</password>
                <mySkywalkingPath>/opt/apache-skywalking-apm-bin/agent/skywalking-agent.jar</mySkywalkingPath>
                <mySkywalkingPort>172.26.211.158:11800</mySkywalkingPort>
                <mySkywalkingServiceName>release::ums</mySkywalkingServiceName>
                <serverPort>29030</serverPort>
                <remotePort>29385</remotePort>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profileActive>prod</profileActive>
                <Xms>-Xms1024m</Xms>
                <Xmx>-Xmx1024m</Xmx>
                <fromImage>registry.cn-shanghai.aliyuncs.com/usp/jdk11:base_share_gbk</fromImage>
                <toImage>registry.cn-shanghai.aliyuncs.com/usp/usp-ums:V2.0D15.1</toImage>
                <username>dev@1904908394781631</username>
                <password>0H%7Uwdw22C</password>
                <mySkywalkingPath>/opt/apache-skywalking-apm-bin/agent/skywalking-agent.jar</mySkywalkingPath>
                <mySkywalkingPort>172.26.211.158:11800</mySkywalkingPort>
                <mySkywalkingServiceName>prod::ums</mySkywalkingServiceName>
                <serverPort>29080</serverPort>
                <remotePort>29385</remotePort>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <!--<arg>&#45;&#45;Dio.netty.tryReflectionSetAccessible=true</arg>-->
                    </compilerArgs>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <fork>true</fork>
                    <!--<includeSystemScope>true</includeSystemScope>-->
                </configuration>
            </plugin>
            <!-- Jib -->
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <from>
                        <image>${fromImage}</image>
                        <auth>
                            <username>${username}</username>
                            <password>${password}</password>
                        </auth>
                    </from>
                    <to>
                        <image>${toImage}</image>
                        <auth>
                            <username>${username}</username>
                            <password>${password}</password>
                        </auth>
                    </to>
                    <container>
                        <jvmFlags>
                            <jvmFlag>${Xms}</jvmFlag>
                            <jvmFlag>-Dio.netty.tryReflectionSetAccessible=true</jvmFlag>
                            <jvmFlag>--add-opens</jvmFlag>
                            <jvmFlag>java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens</jvmFlag>
                            <jvmFlag>java.base/jdk.internal.reflect=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--illegal-access=warn</jvmFlag>
                            <!--                            <jvmFlag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:6007</jvmFlag>-->
                            <jvmFlag>-Xdebug</jvmFlag>
                            <jvmFlag>-Duser.timezone=GMT+8</jvmFlag>
                            <jvmFlag>-javaagent:${mySkywalkingPath}</jvmFlag>
                            <jvmFlag>-Dskywalking.agent.service_name=${mySkywalkingServiceName}</jvmFlag>
                            <jvmFlag>-Dskywalking.collector.backend_service=${mySkywalkingPort}</jvmFlag>
                        </jvmFlags>
                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                        <ports>
                            <port>${serverPort}</port>
                            <port>${remotePort}</port>
                        </ports>
                        <mainClass>com.usp.ums.WebApplication</mainClass>
                    </container>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <!--        将main的配置共享到test中-->
        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>${project.basedir}/src/main/resources</directory>
            </testResource>
        </testResources>
    </build>
</project>